# display-keyboard

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile-build  README.md  clean.sh  config.sh  dobuild.sh  example_test.py  getdev.py  make  make.bat  make.ps1  make.py  make.sh  partitions_keyboard.csv  rebuild.sh  sdkconfig  sdkconfig.defaults  workspace.code-workspace
.github/workflows/: pr_audit.yml  push_audit.yml
fs/: config.ini
main/: Adafruit_TinyUSB_port.cc  CMakeLists.txt  adp5589.cc  adp5589.h  adp5589_registers.h  album_art_downloader_task.cc  album_art_downloader_task.h  apa102.cc  apa102.h  app.cc  app.h  config.h  config_reader.cc  config_reader.h  display.cc  display.h  event_ids.h  filesystem.cc  filesystem.h  gpio_pins.h  hardware.c  http_client.cc  http_client.h  http_server.cc  http_server.h  https_client.cc  https_client.h  https_server.cc  https_server.h  keyboard.cc  keyboard.h  keyboard_main.cc  keyboard_simulator_task.cc  keyboard_simulator_task.h  keyboard_task.cc  keyboard_task.h  led_controller.cc  led_controller.h  lm8330_registers.h  lvgl_drive.cc  (+38 more)
main/images/: gear.h  generic_cover.h  rating_none.h  rating_positive.h  spotify.h  wifi_offline.h  wifi_online.h
pcb/DisplayProto/: sym-lib-table
pcb/DisplayProto/libraries/: DT280QV10-CT.lib
pcb/MainPCB/: DisplayKeyboard-rescue.lib  DisplayKeyboard.net  DisplayKeyboard.pro  DisplayKeyboard.sch  Keyboard Proto.net  Keyboard Proto.pro  NewKeyboardMatrix.sch  README.md  sym-lib-table
pcb/mainpcb/: DisplayKeyboard.kicad_pcb  DisplayKeyboard.kicad_prl  DisplayKeyboard.kicad_pro  DisplayKeyboard.kicad_sch  DisplayKeyboard.pro  DisplayKeyboard.sch  Keyboard Proto.sch  KeyboardsKeys.kicad_sch  KeyboardsKeys.sch
pcb/mainpcb/Gerber/: Keyboard Proto-B_Mask.gbr
pcb/mainpcb2/: DisplayKeyboard.sch  Keyboard Proto.sch  sym-lib-table
pcb/prototype/: .gitignore  Keyboard Proto.kicad_pcb  Keyboard Proto.pro  Keyboard Proto.sch  README.md  fp-lib-table
pcb/prototype/Gerber/: Keyboard Proto-B_Cu.gbr  Keyboard Proto-B_Paste.gbr  Keyboard Proto-B_SilkS.gbr  Keyboard Proto-Edge_Cuts.gbr  Keyboard Proto-F_Cu.gbr  Keyboard Proto-F_Mask.gbr  Keyboard Proto-F_SilkS.gbr  Keyboard Proto-NPTH.drl  Keyboard Proto-PTH.drl
pcb/prototype2/: Keyboard Proto-rescue.lib  Keyboard Proto.kicad_pcb  Keyboard Proto.net  Keyboard Proto.pro  Keyboard Proto.sch  Makefile  README.md  fp-lib-table  sym-lib-table
pcb/prototype3/: Keyboard Proto.kicad_pcb  Keyboard Proto.sch
pcb/prototype3/gerber/: Keyboard Proto-B_Mask.gbr  Keyboard Proto-B_SilkS.gbr  Keyboard Proto-F_Paste.gbr  Keyboard Proto-F_SilkS.gbr  Keyboard Proto-PTH.drl
pcb/prototype4/: Keyboard Proto.kicad_pcb  Keyboard Proto.pro  Keyboard Proto.sch  fp-lib-table  sym-lib-table
pcb/prototype4/Gerber/: Keyboard Proto-B_Paste.gbr  Keyboard Proto-F_Mask.gbr  Keyboard Proto-F_Paste.gbr
scripts/: genmap.py
